--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc"
   },
-  "author": "Thomas Caserta",
+  "author": "Thomas Caserta <tom@caserta.co.uk>",
   "license": "MIT",
+  "url": "https://github.com/TomCaserta/vue-wc-model",
   "devDependencies": {
     "typescript": "^3.1.3"
   }
